After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682105 - Fixes for GtkNotification
Fixes for GtkNotification
Status: RESOLVED FIXED
Product: gnome-contacts
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Contacts maintainer(s)
GNOME Contacts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-17 13:58 UTC by Cosimo Cecchi
Modified: 2012-08-20 14:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
notification: add a "show-close-button" property (8.77 KB, patch)
2012-08-17 13:58 UTC, Cosimo Cecchi
committed Details | Review
notification: fix some GCC warnings (1.86 KB, patch)
2012-08-17 13:58 UTC, Cosimo Cecchi
committed Details | Review
notification: wire the hide() implementation in class_init (1002 bytes, patch)
2012-08-17 13:58 UTC, Cosimo Cecchi
committed Details | Review
notification: fixup size requisition functions (2.98 KB, patch)
2012-08-17 13:58 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-08-17 13:58:39 UTC
I have these fixes in Documents; see attached patches.
Comment 1 Cosimo Cecchi 2012-08-17 13:58:41 UTC
Created attachment 221610 [details] [review]
notification: add a "show-close-button" property

Sometimes we don't want to show a close button, e.g. when we're showing
a progress notification of a print operation, or a "Loading" one.
Add a property to disable that.
Comment 2 Cosimo Cecchi 2012-08-17 13:58:50 UTC
Created attachment 221611 [details] [review]
notification: fix some GCC warnings

Unused variables.
Comment 3 Cosimo Cecchi 2012-08-17 13:58:53 UTC
Created attachment 221612 [details] [review]
notification: wire the hide() implementation in class_init

Or it's completely ineffective
Comment 4 Cosimo Cecchi 2012-08-17 13:58:56 UTC
Created attachment 221613 [details] [review]
notification: fixup size requisition functions

- Use the right padding values when requesting the size
- Rewrite get_preferred_height() using get_preferred_height_for_width()
Comment 5 Alexander Larsson 2012-08-20 14:18:20 UTC
Attachment 221610 [details] pushed as 91e763d - notification: add a "show-close-button" property
Attachment 221611 [details] pushed as 8a69e41 - notification: fix some GCC warnings
Attachment 221612 [details] pushed as 0569aa0 - notification: wire the hide() implementation in class_init
Attachment 221613 [details] pushed as 253363e - notification: fixup size requisition functions