notification: add a "show-close-button" property

Sometimes we don't want to show a close button, e.g. when we're showing
a progress notification of a print operation, or a "Loading" one.
Add a property to disable that.

https://bugzilla.gnome.org/show_bug.cgi?id=682105